--- a/xml/variableinput.ui
+++ b/xml/variableinput.ui
@@ -179,7 +179,7 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>33</width>
+        <width>70</width>
         <height>0</height>
        </size>
       </property>
@@ -218,6 +218,12 @@
       <property name="enabled">
        <bool>false</bool>
       </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -228,6 +234,12 @@
        <size>
         <width>16777215</width>
         <height>16777215</height>
+       </size>
+      </property>
+      <property name="baseSize">
+       <size>
+        <width>200</width>
+        <height>0</height>
        </size>
       </property>
       <property name="focusPolicy">
