--- a/xml/variableinput.ui
+++ b/xml/variableinput.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>517</width>
+    <width>490</width>
     <height>23</height>
    </rect>
   </property>
@@ -46,7 +46,7 @@
      <property name="childrenCollapsible">
       <bool>false</bool>
      </property>
-     <widget class="QLineEdit" name="lineEditName">
+     <widget class="QLineEdit" name="lineEdit_Name">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>1</horstretch>
@@ -69,33 +69,7 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEditMin">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-        <horstretch>1</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="cursor">
-       <cursorShape>IBeamCursor</cursorShape>
-      </property>
-      <property name="focusPolicy">
-       <enum>Qt::WheelFocus</enum>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="frame">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEditMax">
+     <widget class="QLineEdit" name="lineEdit_Min">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>1</horstretch>
@@ -121,7 +95,7 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEditElements">
+     <widget class="QLineEdit" name="lineEdit_Max">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>1</horstretch>
@@ -147,7 +121,33 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEditUnits">
+     <widget class="QLineEdit" name="lineEdit_Elements">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <horstretch>1</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="cursor">
+       <cursorShape>IBeamCursor</cursorShape>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::WheelFocus</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_Units">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>1</horstretch>
@@ -170,7 +170,7 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QComboBox" name="comboBoxAxes">
+     <widget class="QComboBox" name="comboBox_Axes">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -214,7 +214,7 @@
        </property>
       </item>
      </widget>
-     <widget class="QSlider" name="horizontalSliderPoint">
+     <widget class="QSlider" name="horizontalSlider_Point">
       <property name="enabled">
        <bool>false</bool>
       </property>
@@ -249,7 +249,7 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QLabel" name="labelPoint">
+     <widget class="QLabel" name="label_Point">
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -269,7 +269,7 @@
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButtonDelete">
+     <widget class="QPushButton" name="pushButton_Delete">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>2</horstretch>
@@ -298,7 +298,7 @@
        <enum>Qt::NoFocus</enum>
       </property>
       <property name="text">
-       <string>⨯</string>
+       <string>X</string>
       </property>
       <property name="flat">
        <bool>true</bool>
